--- a/src/main/resources/templates/create-option.html
+++ b/src/main/resources/templates/create-option.html
@@ -102,5 +102,12 @@
             </div>
         </div>
     </div>
+    <div id="position-wrapper-2" class="display-none">
+        <div id="comment-wrapper-2">
+            <div class="comment-block">
+                <p class="comment-text">Вы еще не завершили составление варианта</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
