feature: шаблон модуля теперь поддерживает отображение полного решения задания

--- a/src/main/resources/templates/module-template.html
+++ b/src/main/resources/templates/module-template.html
@@ -93,7 +93,13 @@
                 <div id="answer" class="answer display-none">
                     <hr>
                     Ответ: <span id="_answer"></span>
+                    <br>
+                    <br>
+                    <div id="full-answer">
+
+                    </div>
                 </div>
+
             </div>
             <div id="arrow_left" class="arrow-left">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 51" width="24" height="51">
