--- a/src/main/resources/static/css/closed-source/add-task-module-styles.css
+++ b/src/main/resources/static/css/closed-source/add-task-module-styles.css
@@ -111,3 +111,41 @@ textarea{
 #answer-input{
     margin-bottom: 0;
 }
+#created-label, #failed-to-create-label{
+    display: inline-block;
+    position: absolute;
+    top: 23%;
+    left: 40%;
+    z-index: 207;
+    background-color: #121212;
+    border-radius: 20px;
+    font-size: 20px!important;
+    font-family: 'Helvetica', sans-serif!important;
+    color: #f5f5f5bf;
+    padding: 3%;
+    padding-bottom: 2%;
+
+}
+.leave{
+    margin-left: 10px;
+    margin-top: 20px;
+    text-decoration: none;
+    padding: 3%;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.05);
+    font-size: 20px!important;
+    font-family: 'Helvetica', sans-serif!important;
+    color: #f5f5f5bf;
+    transition: color 0.4s ease, background-color 0.4s ease;
+}
+.leave:hover{
+    background-color: #f5f5f5bf;
+    color: black;
+}
+.cover{
+    text-align: right;
+    margin-top: 30px;
+}
+#failed-to-create-label{
+    left: 35%;
+}
