feature: добавлена поддержка развернутого решения шаблоном варианта

--- a/src/main/resources/templates/option-template.html
+++ b/src/main/resources/templates/option-template.html
@@ -90,6 +90,11 @@
                 <div id="answer" class="answer display-none">
                     <hr>
                     Ответ: <span id="_answer"></span>
+                    <br>
+                    <br>
+                    <div id="full-answer">
+
+                    </div>
                 </div>
             </div>
             <div id="arrow_left" class="arrow-left">
