feature: первая версия добавления изображений на сервер

--- a/src/main/resources/templates/module-template.html
+++ b/src/main/resources/templates/module-template.html
@@ -96,7 +96,7 @@
             <div class="task">
                 <span class="label">Задание №<span id="task-num"></span>:</span>
                 <div id="task-text" class="task-text"></div>
-                <div id="task-img" class="display-none"></div>
+                <img id="image-container" class="display-none"/>
                 <div class="wrapper-2">
                     <input id="answer-input" placeholder="Введите ответ" type="text">
                     <div id="send" class="send">Отправить</div>
