feature: добавлена поддержка добавления нескольких форматов изображений и не полных заданий, улучшение дизайна

--- a/src/main/resources/templates/module-template.html
+++ b/src/main/resources/templates/module-template.html
@@ -95,8 +95,13 @@
         <div id="container" class="task-container">
             <div class="task">
                 <span class="label">Задание №<span id="task-num"></span>:</span>
+                <br>
                 <div id="task-text" class="task-text"></div>
-                <img id="image-container" class="display-none"/>
+                <br>
+                <div style="text-align: center">
+                    <img style="width: 300px; height: 200px; border-radius: 5px;" id="image-container" class="display-none"/>
+                </div>
+
                 <div class="wrapper-2">
                     <input id="answer-input" placeholder="Введите ответ" type="text">
                     <div id="send" class="send">Отправить</div>
