--- a/src/main/resources/static/css/closed-source/module-styles.css
+++ b/src/main/resources/static/css/closed-source/module-styles.css
@@ -4,8 +4,16 @@ body{
 .left-block{
     left: 3%;
     top:13%;
+    width: 45%;
+    height: 80%;
+    overflow-y: auto;
+    margin-right: 1%;
     position: fixed;
     text-align: center;
+    border-radius: 40px;
+}
+.left-block::-webkit-scrollbar {
+    display: none;
 }
 
 .selected-border{
@@ -31,7 +39,7 @@ body{
     padding: 20px 40px;
     border: 2px solid #f5f5f5bf;
     border-radius: 40px;
-    width: 550px;
+    width: 80%;
     transition: transform 0.4s ease, border-color 0.8s ease;
     background-color: #262626;
     margin-top: 20px;
@@ -52,10 +60,10 @@ body{
     transform: rotate(-1deg);
 }
 .arrow-right{
-    left: 595px;
+    left: 95%;
 }
 .arrow-left{
-    left: 10px;
+    left: 2%;
 }
 .task, .answer{
     color: #f5f5f5bf;
