feature: добавлена поддержка изображений шаблоном варианта

--- a/src/main/resources/templates/option-template.html
+++ b/src/main/resources/templates/option-template.html
@@ -74,6 +74,11 @@
             <div class="task">
                 <div class="label">Задание №<span id="task-num"></span>:</div>
                 <div id="task-text" class="task-text"></div>
+
+                <div style="text-align: center">
+                    <img style="width: 300px; height: 200px; border-radius: 5px;" id="image-container" class="display-none"/>
+                </div>
+
                 <div id="input-wrap" class="input-wrap display-none">
                     <input type="text" placeholder="Введите ответ" id="input-answer"/>
                 </div>
