--- a/src/main/resources/static/css/closed-source/create-option-styles.css
+++ b/src/main/resources/static/css/closed-source/create-option-styles.css
@@ -191,3 +191,16 @@ body{
     font-size: 18px!important;
     font-family: 'Helvetica', sans-serif!important;
 }
+.text-align-center{
+    text-align: center;
+}
+.styles-for-proxy-img{
+    width: 300px;
+    height: 200px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+.input-wrap{
+    text-align: right;
+    padding: 3%;
+}
