--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -6,7 +6,7 @@
 
     <a th:if="${role=='GOD' or role=='TEACHER'}" class="navigation" href="/app/create-option">Создать вариант</a>
 
-    <a class="navigation" href="/app/homework">Домашняя работа</a>
+    <a class="navigation" href="/app/choose-homework">Домашняя работа</a>
 
     <a th:if="${role=='GOD' or role=='TEACHER'}" class="navigation" href="/app/create-homework">Создать домашнюю работу</a>
 
