--- a/src/main/resources/templates/homework.html
+++ b/src/main/resources/templates/homework.html
@@ -1,10 +1,105 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Домашняя работа</title>
+    <link rel="stylesheet" href="/css/closed-source/header-styles.css">
+
+<!--    <script src="/javascript/closed-source/module_template_logic.js" defer></script>-->
+    <link rel="stydlesheet" type="text/css" th:href="@{/css/open-source/particles-styles.css}"/>
+    <link rel="stylesheet" href="/css/closed-source/module-styles.css">
+    <script th:src="@{/javascript/closed-source/miro-integration.js}" defer></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/closed-source/miro-integration-styles.css}"/>
 </head>
 <body>
+<div th:insert="~{header :: header}"></div>
+
+<div id="particles-js"></div>
+
+<script th:src="@{/javascript/open-source/particles-lib/particles.js}"></script>
+<script th:src="@{/javascript/open-source/particles-lib/design-settings/calm_dark_design.js}"></script>
+<div class="app-wrapper">
+    <div class="left-block">
+        <div class="navigation-block-wrapper">
+            <button id="scroll_left">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31 31" width="31" height="31">
+                    <path d="M 26 1 L 1 15 L 26 30 L 26 1" fill="#f5f5f5bf" stroke-width="0"/>
+                </svg>
+            </button>
+            <div class="navigation-block">
+                <div id="navigation_buttons_wrapper" class="navigation-buttons-wrapper">
+                <span th:id="'tab_'+${i}" th:each="i : ${#numbers.sequence(1, homeworkCapacity)}"
+                        class="navigation-button" th:text="${i}"></span>
+                </div>
+            </div>
+            <button id="scroll_right">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31 31" width="31" height="31">
+                    <path d="M 5 1 L 30 15 L 5 30 L 5 1" fill="#f5f5f5bf" stroke-width="0"/>
+                </svg>
+            </button>
+        </div>
+
+        <div id="container" class="task-container">
+            <div class="task">
+                <span class="label">Задание №<span id="task-num"></span>:</span>
+                <br>
+                <div id="task-text" class="task-text"></div>
+                <br>
+                <div style="text-align: center">
+                    <img style="width: 300px; height: 200px; border-radius: 5px;" id="image-container" class="display-none"/>
+                </div>
+
+                <div class="wrapper-2">
+                    <input id="answer-input" placeholder="Введите ответ" type="text">
+                    <div id="send" class="send">Отправить</div>
+                </div>
+            </div>
+            <div class="answer-wrapper">
+                <button id="show_answer">Показать ответ</button>
+                <div id="answer" class="answer display-none">
+                    <hr>
+                    Ответ: <span id="_answer"></span>
+                    <br>
+                    <br>
+                    <div id="full-answer">
+
+                    </div>
+                </div>
+
+            </div>
+            <div id="arrow_left" class="arrow-left">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 51" width="24" height="51">
+                    <path d="M 15 10 L 01 30 L 15 50" fill="none" stroke="#f5f5f5bf" stroke-width="3"/>
+                </svg>
+            </div>
+            <div id="arrow_right" class="arrow-right">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 51" width="24" height="51">
+                    <path d="M 10 10 L 25 30 L 10 50" fill="none" stroke="#f5f5f5bf" stroke-width="3"/>
+                </svg>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<iframe src="https://miro.com/app/live-embed/uXjVNuEFRQU=/?autoplay=true&moveToViewport=-23165,-5837,13803,7546"
+        frameBorder="0" scrolling="no" allowFullScreen>
+</iframe>
+
+<div id="stretch">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 51" width="24" height="51">
+        <path d="M 15 10 L 01 30 L 15 50" fill="none" stroke="#f5f5f5bf" stroke-width="3"/>
+    </svg>
+</div>
+
+<div id="wrong_answer_comment" class="comment-block opacity-0">
+    <p class="comment-text">Пока что неправильно( , не сдавайся попробуй еще раз</p>
+</div>
+
+<div id="warning_comment" class="comment-block opacity-0">
+    <p class="comment-text">Если ты посмотришь ответ, то задание навсегда пометится красненьким, оно тебе надо? Если да,
+        то нажми еще раз</p>
+</div>
 
 </body>
 </html>
