--- a/src/main/resources/templates/homework.html
+++ b/src/main/resources/templates/homework.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/closed-source/header-styles.css">
 
-<!--    <script src="/javascript/closed-source/module_template_logic.js" defer></script>-->
+    <script src="/javascript/closed-source/homework_template_logic.js" defer></script>
     <link rel="stydlesheet" type="text/css" th:href="@{/css/open-source/particles-styles.css}"/>
     <link rel="stylesheet" href="/css/closed-source/module-styles.css">
     <script th:src="@{/javascript/closed-source/miro-integration.js}" defer></script>
