feature: отображение текста и номера задания в шаблоне ДЗ

--- a/src/main/resources/static/css/closed-source/module-styles.css
+++ b/src/main/resources/static/css/closed-source/module-styles.css
@@ -44,6 +44,8 @@ body{
     background-color: #262626;
     margin-top: 20px;
     text-align: left;
+    font-family: 'Helvetica', sans-serif;
+    font-size: 20px;
 }
 
 .arrow-left, .arrow-right{
