feature: шаблон homework полностью готов

--- a/src/main/resources/templates/homework.html
+++ b/src/main/resources/templates/homework.html
@@ -92,7 +92,7 @@
     </svg>
 </div>
 
-<div id="wrong_answer_comment" class="comment-block opacity-0">
+<div id="wrong_answer_comment" class="comment-block display-none">
     <p class="comment-text">Пока что неправильно( , не сдавайся попробуй еще раз</p>
 </div>
 
