--- a/src/main/resources/static/css/closed-source/module-styles.css
+++ b/src/main/resources/static/css/closed-source/module-styles.css
@@ -215,6 +215,7 @@ input[type='text']:focus{
     padding: 3px 17px;
     padding-top: 8px;
 }
+
 #scroll_left path, #scroll_right path{
     transition: fill 0.4s;
 }
@@ -228,14 +229,18 @@ input[type='text']:focus{
 
 #particles-js {
     background-color: #000000;
+    width: 100%;
+    height: 100%;
+    position: fixed;
 }
 
 .app-wrapper{
    position: absolute;
 }
 .comment-block {
+    font-size: 18px;
+    font-family: 'Helvetica', sans-serif;
     pointer-events: none;
-    font-size: 17px;
     position: absolute;
     top: 60%;
     left: 3%;
