--- a/src/main/resources/templates/choose-homework.html
+++ b/src/main/resources/templates/choose-homework.html
@@ -16,9 +16,9 @@
     <br>
     <div class="input-wrapper">
         <input id="input-option" type="text">
-        <div id="find">
+        <a id="find">
             Найти
-        </div>
+        </a>
     </div>
 
     <div class="interaction-wrapper">
