feature: кнопка назад в homework bug-fix: bugfix choose homework logic

--- a/src/main/resources/templates/homework.html
+++ b/src/main/resources/templates/homework.html
@@ -8,6 +8,7 @@
     <script src="/javascript/closed-source/homework_template_logic.js" defer></script>
     <link rel="stydlesheet" type="text/css" th:href="@{/css/open-source/particles-styles.css}"/>
     <link rel="stylesheet" href="/css/closed-source/module-styles.css">
+    <link rel="stylesheet" href="/css/closed-source/homework-styles.css">
     <script th:src="@{/javascript/closed-source/miro-integration.js}" defer></script>
     <link rel="stylesheet" type="text/css" th:href="@{/css/closed-source/miro-integration-styles.css}"/>
 </head>
@@ -18,6 +19,9 @@
 
 <script th:src="@{/javascript/open-source/particles-lib/particles.js}"></script>
 <script th:src="@{/javascript/open-source/particles-lib/design-settings/calm_dark_design.js}"></script>
+<a id="back" href="/app/choose-homework">
+    Назад
+</a>
 <div class="app-wrapper">
     <div class="left-block">
         <div class="navigation-block-wrapper">
