feature: возможность создания кастомного задания из интерфейса

--- a/src/main/resources/templates/create-homework.html
+++ b/src/main/resources/templates/create-homework.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/closed-source/create-option-styles.css">
     <link rel="stylesheet" href="/css/closed-source/edit-module-styles.css">
     <link rel="stylesheet" href="/css/closed-source/create-homework-styles.css">
+    <script src="/javascript/closed-source/create_homework_logic.js" defer></script>
 </head>
 <body>
 <div th:insert="~{header :: header}"></div>
