--- a/src/main/resources/static/css/closed-source/edit-module-styles.css
+++ b/src/main/resources/static/css/closed-source/edit-module-styles.css
@@ -149,3 +149,18 @@ textarea{
 #failed-to-create-label{
     left: 35%;
 }
+
+.custom-file-upload{
+    background-color: rgba(255, 255, 255, 0.07);
+    border: none;
+    color: #e9e9e9;
+    border-radius: 10px;
+    font-size: 17px;
+    width: 80%;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    font-weight: normal;
+}
+.custom-file-upload:hover{
+    background-color: rgba(255, 255, 255, 0.5);
+    color: #000;
+}
