feature: возможность создания домашнего задания из интерфейса

--- a/src/main/resources/templates/create-homework.html
+++ b/src/main/resources/templates/create-homework.html
@@ -45,6 +45,9 @@
         <div id="scroll-panel" class="scroll-panel">
 
         </div>
+        <div id="create-homework">
+            Создать домашнюю работу
+        </div>
     </div>
 </div>
 </body>
