--- a/src/main/resources/static/css/closed-source/create-homework-styles.css
+++ b/src/main/resources/static/css/closed-source/create-homework-styles.css
@@ -30,3 +30,27 @@
 #add-task{
     margin-top: 4%;
 }
+.scroll-panel{
+    height: 90%;
+    border-bottom: 1px solid white;
+}
+
+#create-homework{
+    background-color: rgba(255, 255, 255, 0.07);
+    border: none;
+    color: #e9e9e9;
+    border-radius: 10px;
+    width: 80%;
+    margin-left: 10%;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    font-weight: normal;
+    padding-bottom: 1%;
+    padding-top: 1%;
+    font-size: 17px;
+    font-family: 'Helvetica', sans-serif;
+    margin-top: 2%;
+}
+#create-homework:hover{
+    background-color: rgba(255, 255, 255, 0.5);
+    color: #000;
+}
