feature: bugfix create_homework + сообщение при создании ДЗ

--- a/src/main/resources/templates/create-homework.html
+++ b/src/main/resources/templates/create-homework.html
@@ -16,7 +16,7 @@
 
 <div id="smoke" class="smoke display-none"></div>
 <div id="created-label" class="display-none">
-    <div>Домашняя работа успешно создана, ученики могут получить к ней доступ введя номер <span id="option-num"></span></div>
+    <div>Домашняя работа успешно создана, ученики могут получить к ней доступ введя номер <span id="homework-num"></span></div>
     <a class="leave" href="/app/all-tasks">Выйти</a>
 </div>
 <div id="failed-to-create-label" class="display-none">
