--- a/src/main/resources/static/css/closed-source/create-homework-styles.css
+++ b/src/main/resources/static/css/closed-source/create-homework-styles.css
@@ -54,3 +54,9 @@
     background-color: rgba(255, 255, 255, 0.5);
     color: #000;
 }
+#created-label{
+    left: 17%;
+}
+.leave{
+    padding: 1% 5%;
+}
