feature: комментарий на попытку создания пустого ДЗ

--- a/src/main/resources/templates/create-homework.html
+++ b/src/main/resources/templates/create-homework.html
@@ -23,7 +23,9 @@
     <div>Не удалось создать домашнюю работу, попробуйте позже</div>
     <a class="leave" href="/app/all-tasks">Выйти</a>
 </div>
-
+<div id="warning_comment" class="comment-block display-none">
+    <p class="comment-text">Прежде чем создать домашнюю работу, нужно добавить в нее хотя бы одно задание</p>
+</div>
 <div class="app-wrapper">
     <div class="left-block">
         <div id="task-form">
